Bug 1712301 - Fix order of matrix multiplication for bounding box calculation r=botond

Differential Revision: https://phabricator.services.mozilla.com/D174201